package ch.uzh.ifi.hase.soprafs22.screwyourneighborserver.entity;

import javax.persistence.*;

@Entity
public class Hand {
  @Id @GeneratedValue private Long id;
}
